--- a/Squares/Squares/SquareMenuViewController.xib
+++ b/Squares/Squares/SquareMenuViewController.xib
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment version="2304" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SquareMenuViewController">
@@ -19,38 +24,33 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background.png" translatesAutoresizingMaskIntoConstraints="NO" id="894-3r-O9G">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                 </imageView>
                 <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ROT-hq-whQ" userLabel="SquarePopZone">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wBR-qN-bzl" userLabel="Zone1">
-                            <rect key="frame" x="40" y="40" width="1" height="167"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <rect key="frame" x="40" y="40" width="28.5" height="246"/>
+                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         </view>
                         <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XDg-cm-dDu" userLabel="Zone2">
-                            <rect key="frame" x="280" y="40" width="1" height="167"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <rect key="frame" x="307.5" y="40" width="28.5" height="246"/>
+                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         </view>
                         <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SQUARES LOGO Test .png" translatesAutoresizingMaskIntoConstraints="NO" id="GIi-B8-mGs" userLabel="Logo">
-                            <rect key="frame" x="79" y="20" width="162" height="162"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <rect key="frame" x="106.5" y="20" width="162" height="162"/>
+                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="162" id="fOw-oG-sSm"/>
                                 <constraint firstAttribute="width" constant="162" id="uQy-bZ-TQr"/>
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="GIi-B8-mGs" firstAttribute="top" secondItem="ROT-hq-whQ" secondAttribute="top" constant="20" id="9LW-SL-keL"/>
                         <constraint firstItem="wBR-qN-bzl" firstAttribute="bottom" secondItem="XDg-cm-dDu" secondAttribute="bottom" id="CRu-Vl-Hvo"/>
@@ -65,101 +65,102 @@
                     </constraints>
                 </view>
                 <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wp-0h-2Dh" userLabel="Normal Game">
-                    <rect key="frame" x="60" y="260" width="200" height="40"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="60" y="359" width="255" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="200" id="qfC-Ge-dHl"/>
                         <constraint firstAttribute="height" constant="40" id="qhh-cj-gXh"/>
                     </constraints>
                     <state key="normal" title="TRAINING">
-                        <color key="titleColor" red="0.45464439819880087" green="0.81129534213225651" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="0.45464439819880087" green="0.81129534213225651" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="launchGameView:" destination="-1" eventType="touchUpInside" id="1Sd-SE-WTc"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qBN-N9-aGr" userLabel="HardCore">
-                    <rect key="frame" x="60" y="320" width="200" height="40"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="60" y="419" width="255" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="QNN-4O-Ywa"/>
-                        <constraint firstAttribute="width" constant="200" id="USu-fs-jHm"/>
                     </constraints>
                     <state key="normal" title="HARDCORE">
-                        <color key="titleColor" red="0.89940649271011353" green="0.3093540449387242" blue="0.10348971726771863" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="0.89940649271011353" green="0.3093540449387242" blue="0.10348971726771863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="launchHardCoreGameView:" destination="-1" eventType="touchUpInside" id="qmr-yU-MGN"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDa-zY-k1o" userLabel="Options">
-                    <rect key="frame" x="60" y="380" width="200" height="40"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="60" y="479" width="255" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="200" id="CFp-zm-V5s"/>
                         <constraint firstAttribute="height" constant="40" id="GTV-0n-Ntl"/>
                     </constraints>
                     <state key="normal" title="OPTIONS">
-                        <color key="titleColor" red="0.89940649269999995" green="0.30935404490000001" blue="0.10348971730000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="0.89940649269999995" green="0.30935404490000001" blue="0.10348971730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="launchOptions:" destination="-1" eventType="touchUpInside" id="X1E-j2-oGH"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook.png" translatesAutoresizingMaskIntoConstraints="NO" id="IKj-rG-dOP">
-                    <rect key="frame" x="268" y="522" width="32" height="32"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="32" id="8qa-l9-yDW"/>
-                        <constraint firstAttribute="height" constant="32" id="Ix3-wC-HQt"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© 2014 Forstulen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWf-tg-lfJ">
-                    <rect key="frame" x="20" y="527" width="162" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© 2014 Romain Tholimet" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="FWf-tg-lfJ">
+                    <rect key="frame" x="20" y="626" width="162" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="162" id="Nnf-iO-ISP"/>
                         <constraint firstAttribute="height" constant="21" id="l8v-CT-oj9"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="github_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="6oz-Sg-tro">
+                    <rect key="frame" x="315" y="607" width="40" height="40"/>
+                    <gestureRecognizers/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="7bJ-OF-kYV"/>
+                        <constraint firstAttribute="width" constant="40" id="scf-9y-MUh"/>
+                    </constraints>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="4mp-yF-1pF" appends="YES" id="QJT-14-9v9"/>
+                    </connections>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="nDa-zY-k1o" firstAttribute="top" secondItem="qBN-N9-aGr" secondAttribute="bottom" constant="20" id="0fz-uL-bVb"/>
                 <constraint firstItem="qBN-N9-aGr" firstAttribute="top" secondItem="3Wp-0h-2Dh" secondAttribute="bottom" constant="20" id="1uq-wA-rBg"/>
-                <constraint firstItem="894-3r-O9G" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="3vG-Ot-JCl"/>
-                <constraint firstAttribute="bottom" secondItem="894-3r-O9G" secondAttribute="bottom" id="4hN-g2-DxF"/>
-                <constraint firstAttribute="trailing" secondItem="894-3r-O9G" secondAttribute="trailing" id="M7L-Fg-MUW"/>
-                <constraint firstAttribute="bottom" secondItem="IKj-rG-dOP" secondAttribute="bottom" constant="14" id="Po1-P2-E2L"/>
-                <constraint firstItem="ROT-hq-whQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="RLo-t5-Zk9"/>
+                <constraint firstItem="894-3r-O9G" firstAttribute="top" secondItem="WQn-Ms-e7m" secondAttribute="top" id="3vG-Ot-JCl"/>
+                <constraint firstItem="WQn-Ms-e7m" firstAttribute="bottom" secondItem="894-3r-O9G" secondAttribute="bottom" id="4hN-g2-DxF"/>
+                <constraint firstItem="WQn-Ms-e7m" firstAttribute="trailing" secondItem="6oz-Sg-tro" secondAttribute="trailing" constant="20" id="FVN-FW-weV"/>
+                <constraint firstItem="WQn-Ms-e7m" firstAttribute="trailing" secondItem="894-3r-O9G" secondAttribute="trailing" id="M7L-Fg-MUW"/>
+                <constraint firstItem="ROT-hq-whQ" firstAttribute="leading" secondItem="WQn-Ms-e7m" secondAttribute="leading" id="RLo-t5-Zk9"/>
                 <constraint firstAttribute="trailing" secondItem="3Wp-0h-2Dh" secondAttribute="trailing" constant="60" id="Rlt-5V-L6I"/>
                 <constraint firstAttribute="bottom" secondItem="FWf-tg-lfJ" secondAttribute="bottom" constant="20" id="RrY-9v-tQE"/>
                 <constraint firstAttribute="trailing" secondItem="qBN-N9-aGr" secondAttribute="trailing" constant="60" id="THx-dq-Rke"/>
                 <constraint firstAttribute="trailing" secondItem="nDa-zY-k1o" secondAttribute="trailing" constant="60" id="WZk-09-s7k"/>
                 <constraint firstItem="894-3r-O9G" firstAttribute="width" secondItem="ROT-hq-whQ" secondAttribute="width" id="Zu8-oP-0i7"/>
-                <constraint firstAttribute="trailing" secondItem="IKj-rG-dOP" secondAttribute="trailing" constant="20" id="alj-Kl-7M0"/>
                 <constraint firstItem="nDa-zY-k1o" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="bFQ-3p-DoB"/>
+                <constraint firstItem="6oz-Sg-tro" firstAttribute="bottom" secondItem="FWf-tg-lfJ" secondAttribute="bottom" id="eWl-hV-JKA"/>
                 <constraint firstItem="3Wp-0h-2Dh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="fLT-tR-VMZ"/>
-                <constraint firstItem="ROT-hq-whQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hxA-ju-BYp"/>
+                <constraint firstItem="ROT-hq-whQ" firstAttribute="top" secondItem="WQn-Ms-e7m" secondAttribute="top" id="hxA-ju-BYp"/>
                 <constraint firstItem="894-3r-O9G" firstAttribute="height" secondItem="ROT-hq-whQ" secondAttribute="height" id="hxF-kQ-6Jx"/>
                 <constraint firstItem="FWf-tg-lfJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="iQ5-EN-Pex"/>
                 <constraint firstItem="FWf-tg-lfJ" firstAttribute="top" secondItem="nDa-zY-k1o" secondAttribute="bottom" constant="107" id="kIC-vh-ZtG"/>
-                <constraint firstItem="894-3r-O9G" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="m31-qf-uMr"/>
+                <constraint firstItem="894-3r-O9G" firstAttribute="leading" secondItem="WQn-Ms-e7m" secondAttribute="leading" id="m31-qf-uMr"/>
                 <constraint firstItem="qBN-N9-aGr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="sO3-5K-WBQ"/>
             </constraints>
-            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <viewLayoutGuide key="safeArea" id="WQn-Ms-e7m"/>
+            <point key="canvasLocation" x="146.40000000000001" y="48.125937031484263"/>
         </view>
+        <tapGestureRecognizer id="4mp-yF-1pF">
+            <connections>
+                <action selector="redirectToGithub:" destination="-1" id="GSa-Xy-NMr"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
-        <image name="Background.png" width="640" height="960"/>
+        <image name="Background.png" width="320" height="568"/>
         <image name="SQUARES LOGO Test .png" width="128" height="128"/>
-        <image name="facebook.png" width="31" height="31"/>
+        <image name="github_logo.png" width="60" height="60"/>
     </resources>
 </document>
